# pegadocs

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml
app/: .dockerignore  .env.example  Dockerfile  __main__.py  deps.py  logging_config.py  main.py  pyproject.toml
app/application/: exceptions.py  models.py
app/application/protocols/: auth_provider.py  chat_protocol.py  chat_store_protocol.py  reader_protocol.py  storage_provider.py  task_store.py  vector_store_protocol.py
app/application/services/: __init__.py  auth_service.py  chat_service.py  collection_service.py  data_source_service.py  database_service.py  embedding_job_monitor.py  model_service.py  phase2_service.py  prompt_service.py  reader_service.py  referal_service.py  task_service.py
app/infra/: auth.py  auth_error_handler.py  auth_exception_mapper.py  config.py  database.py
app/infra/factories/: auth_provider.py  chat_store.py  models.py  reader.py  storage_provider.py  task_stores.py  vector_store.py
app/infra/utils/: chat_utils.py  collection_utils.py  embedding_job_utils.py  encrypt_utils.py  fastapi_utils.py  s3_utils.py  supabase_utils.py  token_counter.py  vector_store_utils.py
app/presentation/: depends_stub.py  health.py
app/presentation/controllers/: __init__.py  auth_controller.py  chat_controller.py  collection_controller.py  data_source_controller.py  database_controller.py  embedding_controller.py  model_controller.py  prompt_controller.py  reference_controller.py  scanning_controller.py
app/presentation/routers/: __init__.py  auth_routers.py  chat_routers.py  collection_routers.py  data_source_routers.py  database_routers.py  embedding_routers.py  mock_routers.py  model_routers.py  prompt_routers.py  reference_routers.py  scanning_routers.py
app/presentation/schemas/: auth_schemas.py  chat_schemas.py  collection_schemas.py  data_source_schemas.py  database_schemas.py  embedding_schemas.py  model_schemas.py  prompt_schemas.py  reference_schemas.py  scanning_schemas.py  task_schemas.py
app/tasks/: celery_app.py  embedding.py  scan.py
app/tests/: conftest.py  end_to_end_test.py
app/tests/routers/: test_auth_routers.py  test_chat_routers.py  test_collection_routers.py  test_database_router.py  test_embeding_routers.py  test_mock_routers.py  test_model_routers.py  (+2 more)
(+103 files in other folders)
